fix(docs): add flex wrap to demo buttons to fix responsive view

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -24,6 +24,7 @@
 
 .exmapleButtonsContainer {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 8px;
